# serializer version: 1
# name: test_create_cp
  '''
  CREATE COMPUTE POOL cpName
  MIN_NODES = 42
  MAX_NODES = 42
  INSTANCE_FAMILY = familyValue;
  
  '''
# ---
# name: test_drop_cp
  'drop compute pool cpNameToDrop;'
# ---
# name: test_list_cp
  'show compute pools;'
# ---
# name: test_stop_cp
  'alter compute pool cpNameToStop stop all services;'
# ---
